apps-old/adguard/base/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: adguard-statefulset
  namespace: adguard
spec:
  serviceName: "adguard"
  replicas: 1  # Number of replicas
  selector:
    matchLabels:
      app: adguard-home
  template:
    metadata:
      labels:
        app: adguard-home
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - adguard-home
              topologyKey: "kubernetes.io/hostname" # Ensure 1 pod per node
      containers:
      - name: adguard-home
        image: adguard/adguardhome:v0.107.71
        ports:
        - containerPort: 53
          name: dns
          protocol: UDP
        - containerPort: 53
          name: dns-tcp
          protocol: TCP
        - containerPort: 3000
          name: http-initial
        - containerPort: 80
          name: http
          protocol: TCP
        volumeMounts:
        - name: adguard-data
          mountPath: /opt/adguardhome/work/ # AdGuard Runtime data
        - name: adguard-config
          mountPath: /opt/adguardhome/conf/ # AdGuard configuration
      volumes:
      - name: adguard-data
        persistentVolumeClaim:
          claimName: adguard-data
      - name: adguard-config
        persistentVolumeClaim:
          claimName: adguard-config
