apps-old/adguard/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: adguard-home
  namespace: adguard
spec:
  type: ClusterIP
  selector:
    app: adguard-home
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
      name: http-initial
    - port: 53
      targetPort: 53
      protocol: TCP
      name: dns-tcp
    - port: 53
      targetPort: 53
      protocol: UDP
      name: dns-udp
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
